--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>aruco_detection</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The aruco_detection package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="pallav@todo.todo">pallav</maintainer>
+  <maintainer email="qwerlqwe@yandex.ru">pallav</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
